--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body style="background:linear-gradient(to right, #00467f, #a5cc82);">
 
-  <div id="map" style="position: absolute;margin: auto; top: 0; right: 0; bottom: 0; left: 0;width: 95%; height:85vh; border:solid 3px black; border-radius:55px; background: linear-gradient(to right, #00467f, #a5cc82); "></div>
+  <div id="map" style="position: absolute;margin: auto; top: 0; right: 0; bottom: 0; left: 0; height:100vh;"></div>
 
   <script>
     var map = L.map('map', {
