--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     });
     north.onAdd = function(map) {
       var div = L.DomUtil.create("div", "info legend");
-      div.innerHTML = '<a href="https://yusufalbeni.com"target="_blank"><img src="src/img/yusufalbeni.png" style="height: 32px;">';
+      div.innerHTML = '<a href="https://yusufalbeni.me"target="_blank"><img src="src/img/yusufalbeni.png" style="height: 32px;">';
       return div;
     }
     north.addTo(map);
